--- a/public/success.html
+++ b/public/success.html
@@ -15,11 +15,10 @@
 			function redirectToAnotherUrl() {
 				setTimeout(
 						function() {
-							window.location.href = 'http://127.0.0.1:3000/RiepilogoOrdine.html'; // Replace with your target URL
-						}, 5000); // 5000 milliseconds = 5 seconds
+							window.location.href = 'http://127.0.0.1:3000/RiepilogoOrdine.html';
+						}, 5000); 
 			}
 
-			// Call the function when the page loads
 			window.onload = redirectToAnotherUrl;
 	</script>
   	
