--- a/public/cancel.html
+++ b/public/cancel.html
@@ -13,11 +13,10 @@
 			function redirectToAnotherUrl() {
 				setTimeout(
 						function() {
-							window.location.href = 'http://127.0.0.1:3000/Home.html'; // Replace with your target URL
-						}, 5000); // 5000 milliseconds = 5 seconds
+							window.location.href = 'http://127.0.0.1:3000/Home.html';
+						}, 5000); 
 			}
 
-			// Call the function when the page loads
 			window.onload = redirectToAnotherUrl;
 		</script>
 </body>
